--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euro</title>
+    <!-- title logo  -->
+    <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon">
     <!-- Font awsome -->
     <script src="https://kit.fontawesome.com/65423157a3.js" crossorigin="anonymous"></script>
     <!-- link with style -->
